<resources>
    <string name="app_name">login</string>
    <string name="editLogin">login is admin</string>
    <string name="editPassword">Password is 1234</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="moin">-</string>
    <string name="multi">×</string>
    <string name="div">÷</string>
    <string name="equal">=</string>
    <string name="del">del</string>
    <string name="virgule">,</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="exp">exp</string>
    <string name="pourcentage">%</string>
    <string name="c">C</string>
    <string name="CE">CE</string>
    <string name="quotient">1/x</string>
    <string name="carre">x²</string>
    <string name="racin">√x</string>
    <string name="calc_scientifique">Scientifique</string>
    <string name="buttonValidate">Validate</string>
    <string name="calc_standard">Standart</string>
    <string name="cal_langeur">Langeur</string>
    <string name="metre">m</string>
    <string name="kilometre">Km</string>
    <string name="pouce">pouce</string>
    <string name="pied">pied</string>
    <string name="indication">login(admin)password(1234)</string>
    <string name="menu"></string>
</resources>