<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentBottom="true"
    android:gravity="bottom"
    android:background="#F5F5DC"
    android:paddingBottom="50dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/m"
            android:layout_height="50dp"
            android:layout_width="200dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/metre"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_height="50dp"
            android:layout_width="200dp"
            android:layout_weight="1"
            android:text="en metre"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pied"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/pied"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="en pied"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pouce"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/pouce"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="en pouce"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/km"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/kilometre"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="en kilometre"
            android:textSize="24sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <Button
            android:id="@+id/buttonCe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CE"
            android:backgroundTint="#4169E1"
            android:layout_margin="2dp"/>



        <Button
            android:id="@+id/buttonDel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/del"
            android:backgroundTint="#FF9800"

            android:textColorLink="#FF9800" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:text="@string/seven"
            />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:text="@string/eight"
            />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nine"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/six"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/buttonVirgule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/virgule"
            android:backgroundTint="@color/white"
            android:textColor="#141312"
            android:layout_margin="2dp"/>

    </LinearLayout>
</LinearLayout>
